--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "erusev/parsedown": "^1.6",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "roumen/feed": "^2.11"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
