--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "@angular/cli": "^1.6.2",
+        "bower": "^1.8.2",
+        "ng-common": "^0.8.13",
+        "ts-loader": "^3.2.0",
+        "webpack": "^3.10.0"
     }
 }
